@@ -367,7 +367,7 @@
       <module id="gnome-control-center"/>
       <module id="gnome-desktop"/>
       <module id="gnome-doc-utils"/>
-      <module id="gnome-games"/>
+      <module id="gnome-games" branch="gnome-2-18"/>
       <module id="gnome-icon-theme" branch="gnome-2-18"/>
       <module id="gnome-keyring"/>
       <module id="gnome-keyring-manager"/>
