@@ -1,6 +1,11 @@
 2007-03-13  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: Branched gnome-games for 2.18.
+
+2007-03-13  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: Removed at-spi module.
 
 2007-03-12  David Lodge <dave@cirt.net>
